# rust-meow

./: .gitignore  Makefile  README.md
backend/: go.mod  go.sum
backend/cmd/rust-meow-backend/: main.go
backend/internal/app/: server.go  server_test.go
backend/internal/bridge/: codec.go  codec_test.go
backend/internal/domain/: types.go
backend/internal/logging/: logging.go  logging_test.go
backend/internal/profilelock/: lock.go  lock_test.go  lock_unix.go  lock_unsupported.go  lock_windows.go
backend/internal/search/: fuzzy.go  fuzzy_test.go
backend/internal/securefs/: private.go  private_test.go
backend/internal/sqliteprivacy/: sqliteprivacy.go
backend/internal/store/: store.go  store_test.go
backend/internal/wa/: client.go  client_test.go
desktop/: Cargo.toml  README.md  build.rs
desktop/src/: bridge.rs  emoji_picker.rs  main.rs  model.rs  paths.rs  rpc.rs  settings.rs  sticker.rs
docs/: NOTIFICATION_QA.md  PERFORMANCE.md  TAURI_PARITY.md  UI_REDESIGN.md
proto/: bridge.proto
scripts/perf/: budgets.mjs  budgets.test.mjs  capture-native.mjs  collect.mjs  power.mjs
tauri/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauri/src/: App.tsx  index.tsx  styles.css
tauri/src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs  native_notifications.rs  proto.rs
tauri/src/components/: Avatar.tsx  ChatSwitcher.tsx  Composer.tsx  Conversation.tsx  EmojiPicker.tsx  MemberPanel.tsx  MessageBubble.tsx  Panels.tsx  ParticipantList.tsx  ParticipantRow.tsx  Primitives.tsx  Screens.tsx  Sidebar.tsx  SpotlightSearch.tsx  StickerTray.tsx  Tabs.tsx  ThemeIcon.tsx  TitleBar.tsx
tauri/src/lib/: bridge.ts  browser-mock.ts  chat-merge.ts  emoji-autocomplete.ts  format.ts  notification-policy.ts  notification-routing.ts  notifications.ts  participant-avatar-queue.ts  participant-roster.ts  performance.ts  polls.ts  (+6 more)
tauri/tests/: backend-lifecycle.test.ts  chat-merge.test.ts  emoji-autocomplete.test.ts  notification-routing.test.ts  notifications.test.ts  pairing.test.ts  participant-avatar-queue.test.ts  performance.test.ts  polls.test.ts  scroll-restoration.test.ts  send-idempotency.test.ts  spotlight.test.ts  tab-keyboard.test.ts  theme.test.ts  unread.test.ts  unsupported.test.ts  whatsapp-formatting.test.ts  workspace.test.ts
(+10 files in other folders)
