[package]
name = "rust-meow-desktop"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
emojis = "0.9.0"
# GPUI's exact 1a246efd revision is recorded in Cargo.lock. These intentionally
# use the same unqualified source URL as gpui-component so Cargo has one GPUI.
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "031555662e99a1b5a549990b47f246d475b8288a" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "wayland", "x11"] }
prost = "0.14"
qrcode = { version = "0.14", default-features = false }
smol = "2"
uuid = { version = "1.18", features = ["v4"] }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dev-dependencies]
tempfile = "3.23"

[profile.dev]
debug = "limited"
