[package]
name = "rust-meow-tauri"
version = "0.1.0"
description = "A small, fast WhatsApp desktop client"
authors = ["Rust Meow contributors"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thinkter/rust-meow"

[lib]
name = "rust_meow_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rust-meow"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
anyhow = "1.0"
async-channel = "2.5"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.3"
tokio = { version = "1.49", features = ["sync", "time"] }
uuid = { version = "1.18", features = ["v4"] }
webp = { version = "0.3.1", default-features = false }

[dev-dependencies]
tauri = { version = "2.11.5", features = ["protocol-asset", "test"] }
tempfile = "3.23"

[profile.dev]
debug = "limited"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
